adding new Programms for javascript concepts

--- a/Function_Calculator.html
+++ b/Function_Calculator.html
@@ -5,13 +5,12 @@
     <input id ="Val1"/>
     <input id ="Val2"/>
     <br>
-    <button id="addbtn">Add</button>
-    <p id="Result">   </p>   
+    <button id ="Addbtn">Add</button>
+    <p id="Result"></p>   
     </body>
 
     <script>
-        document.getElementById("addbtn").onClick=add2Number;
-        
+        document.getElementById("Addbtn").onClick=add2Number;
         function add2Number()
         {
             let a=document.getElementById("Val1").value;
